# my_cloud

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
my_cloud/: manage.py
my_cloud/filestorage/: admin.py  models.py
my_cloud/front/static/: tsconfig.json
my_cloud/front/static/src/: mainBuild.js
my_cloud/front/templates/: index.html
my_cloud/my_cloud/: asgi.py  settings.py  urls.py  wsgi.py
my_cloud/users/: views.py
my_cloud_back/: gunicorn_config.py  manage.py
my_cloud_back/filestorage/: apps.py  consumer.py  models.py  routing.py  urls.py  views.py
my_cloud_back/filestorage/migrations/: 0001_initial.py  0002_alter_uploadedfile_file.py  0003_alter_uploadedfile_size.py
my_cloud_back/front/: views.py
my_cloud_back/front/static/: index.css  index.html  index.js  mainBuild.js
my_cloud_back/front/templates/: index.html
my_cloud_back/my_cloud/: asgi.py  settings.py  urls.py
my_cloud_back/users/: urls.py  views.py
my_cloud_front/: .env.example  index.html  package.json  vite.config.ts
my_cloud_front/src/: App.css  App.tsx  mainBuild.css
my_cloud_front/src/components/: AuthBlock.tsx  FileUpload.tsx  FileViewer.tsx  Menu.tsx  MyFiles.tsx  RegForm.tsx  Registrarion.tsx
my_cloud_front/src/components/files/: DeleteButton.tsx  DownloadButton.tsx  FileNameEditor.tsx  FileUpload.tsx  FileViewer.tsx  MyFiles.tsx  ShareButton.tsx  dateConverter.ts  fetchFiles.ts  fetchFiles.tsx
my_cloud_front/src/components/main/: HomePage.tsx
my_cloud_front/src/hooks/: fetchFiles.tsx
my_cloud_front/src/models/: index.ts
(+8 files in other folders)
